GNOME Bugzilla – Bug 704182
CPU "stacked area chart" is not "stacked"
Last modified: 2013-07-14 22:30:02 UTC
Go to the Preferences > Resources screen, and toggle the "Draw CPU chart as stacked area chart" checkbox. While looking at the Resources tab, you will see that the checkbox merely fills the area drawn by the CPU lines -- they do *not* stack on top of each other. Having the "stacked area chart" box ticked while not actually stacking means that because the lowest CPU number is drawn first, they obscure the usage of the higher CPU numbers. So if CPU #1 is using 100% CPU, I cannot even see what the other CPUs are doing. The way to fix this is to actually *stack* the areas (like what Cacti does -- think "Area" vs "Stack" when creating graphs in Cacti), and triple the area allocated. So if you have three CPUs, the graph will need to be able to scale up to 300% CPU (i.e. if all three CPUs are using 100% CPU, you will obviously need to be able to draw 3 x 100% stacked on top of each other). If "stacking" is not actually what you meant, I suggest you instead rename the checkbox to "Draw CPU chart in a completely retarded filled area fashion so as to obscure what is actually going on".
In fact the stacked area chart works from the moment you ticked it, so previously drawn graphs won't change. Clearing the whole graphs might be a solution here.
Created attachment 249104 [details] Screenshot illustrating the height differences with/without tick Ah, I see what you mean. Now that you say that, it makes perfect sense. There is now way I would have worked that out through intuition. Clearing the graph would be a valid solution to this. To illustrate the difference with/without the "stacking" box ticked, I've attached a screenshot of a more-or-less continuous CPU load, except with me alternating the checkbox. (BTW, this screenshot illustrates another drawing bug, where the legends sometimes disappear and don't get drawn until the window is resized. Happens on both Intel and NVIDIA.)
Thanks for the screenshot. As for the solution, as we both agree that clearing the graph on checkbox change would be a valid solution, I will go that route. As for the "other drawing bug": it's discussed in bug 693677, affects only some themes, and I've fixed it recently in the development version, so the fix is ready, you'll just have to wait until the next release (stable 3.10/development 3.9.5) gets to your computer.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Awesome, good on ya. :-)