Reset CPU chart data on stacked area chart toggle (Bug 804182) https://bugzilla.gnome.org/show_bug.cgi?id=704182